# csa-lab4

./: .gitignore  OLD_README.md  README.md  README_updated.md  pyproject.toml
.github/workflows/: ci.yml
examples/: arithmetic.fth  cache_demo.fth  cat.fth  cat.txt  hello.fth  hello_user_name.fth  hello_user_name.txt  irq_echo.fth  irq_echo.txt  prob1.fth  prob1.txt  sort.fth  sort.txt  wide.fth  xt_demo.fth
fig/: cache.drawio  control_unit.drawio  control_unti.drawio  datapath.drawio
src/: isa.py  machine.py  stdlib.fth  translator.py
src/ak_4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_golden.py
tests/golden/: arithmetic.yml  cache_demo.yml  cat.yml  cat2.yml  hello.yml  hello_user_name.yml  irq_echo.yml  prob1.yml  sort.yml  wide.yml  xt_demo.yml
