[project]
name = "ak-4"
version = "0.1.0"
description = "Лабораторная работа 4: MiniForth, стековый процессор, trap I/O, pstr, cache"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-golden>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["isa", "machine", "translator"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "^\\.venv/",
    "^\\.pytest_cache/",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = ["pytest", "pytest_golden.*"]
ignore_missing_imports = true
